possible fix for modal on mobiles

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,14 +15,12 @@ p {
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 .openModalBtn {
-  position: sticky;
   bottom: 35px;
   float: right;
   margin: 30px;
@@ -45,6 +43,7 @@ p {
 .closeModalBtn {
   position: sticky;
   bottom: 35px;
+  bottom: 35px;
   float: right;
   margin: 30px;
   width: 2.5em;
@@ -64,6 +63,24 @@ p {
   background-color: none;
 }
 
+.modalBtn {
+  position: sticky;
+  position: -webkit-sticky;
+  bottom: 35px;
+  top: 35px;
+  float: right;
+  margin: 30px;
+  width: 2.5em;
+  height: 2.5em;
+  border: none;
+  border-radius: 50%;
+  background-color: #ff7c5b;
+  color: white;
+  cursor: pointer;
+  font-size: xx-large;
+  z-index: 3;
+}
+
 @media only screen and (max-width: 700px) {
   h1 {
     font-size: 2rem;
@@ -75,10 +92,6 @@ p {
 
   p {
     font-size: 1.3rem;
-  }
-
-  .App {
-    overflow-x: hidden;
   }
 
   .App-logo {
